--- a/gui/Dockerfile
+++ b/gui/Dockerfile
@@ -4,10 +4,13 @@ RUN apt-get update && \
     apt-get install -y python3-tk tk x11-apps libx11-6 && \
     rm -rf /var/lib/apt/lists/*
 
+RUN pip install pillow
+
 WORKDIR /app
 
-COPY aeropuerto_gui.py .
+COPY gui/gui.py .
+COPY images ./images
 
 ENV DISPLAY=:0
 
-CMD ["python", "aeropuerto_gui.py"]
+CMD ["python", "gui.py"]
